# basketball

./: .gitignore  README.md  demo.py  pyproject.toml
src/: app.py  pose_stream.py  roboflow_detector.py  shot_detector.py
tests/: test_shot_classifier.py
