[project]
name = "shot_coach"
version = "0.1.0"
description = "Basketball shot analysis system using computer vision"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "numpy>=1.24.0",
    "mediapipe>=0.10.0",
    "gradio>=4.0.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python = "3.12" 