[project]
name = "shot_coach"
version = "0.1.0"
description = "Minimal end‑to‑end basketball shot classification prototype"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "opencv-python>=4.9.0",
    "ultralytics>=8.1.30",
    "numpy>=1.26.0",
    "mediapipe>=0.10.9",  # reserved for future pose integration
    "gradio>=4.27.0",
    "torch>=2.2.0",  # for YOLO
    "torchvision>=0.17.0",  # for YOLO
]

[tool.uv]  # uv‑specific settings can remain default